--- a/resources/main.scss
+++ b/resources/main.scss
@@ -1,26 +1,5 @@
-@font-face {
-    font-family: 'silkscreen';
-    src: url(slkscr-webfont.eot);
-    src: url(slkscr-webfont.eot?#iefix) format("embedded-opentype"),
-         url(slkscr-webfont.woff) format("woff"),
-         url(slkscr-webfont.ttf) format("truetype"),
-         url(slkscr-webfont.svg#silkscreennormal) format("svg");
-    font-weight: 400;
-    font-style: normal;
-}
-
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
-    display: block;
-}
+@import 'resources/reset';
+@import 'resources/nav';
 
 html {
     display: block !important;
@@ -47,116 +26,6 @@ a:hover {
     color: #777;
 }
 
-nav {
-    padding-top: 30px;
-    margin-bottom: 40px;
-    border-bottom: 2px solid #bbb;
-    word-spacing: 10px;
-}
-
-nav a:first-child {
-    font-weight: 700;
-    font-size: 5em;
-    text-shadow: -3px 3px 1px #000;
-    border: 0 !important;
-    box-shadow: none !important;
-    background: transparent !important;
-}
-
-nav a:first-child:hover {
-    border: 0;
-    top: 0;
-    left: 0;
-    box-shadow: none;
-    padding: 10px;
-    margin: 0;
-}
-
-nav a:first-child::before,nav a:first-child::after {
-    content: none;
-}
-
-nav a {
-    display: inline-block;
-    font-size: 1.4em;
-    left: 0;
-    padding: 10px;
-    position: relative;
-    top: 0;
-    word-spacing: normal;
-    margin-left: 0;
-    margin-bottom: 7px;
-    border-bottom: 0 solid #555;
-    border-left: 0 solid #777;
-    border-top: 0 solid #ddd;
-    border-right: 0 solid #eee;
-}
-
-nav a,nav a::before,nav::after {
-    transition: all 80ms linear;
-}
-
-nav a:hover {
-    border-bottom-width: 7px;
-    border-left-width: 7px;
-    box-shadow: -1px 1px #777 inset;
-    top: -7px;
-    left: 7px;
-    margin-left: -7px;
-    margin-bottom: 0;
-}
-
-nav a:active,#home:target [href="#home"],#resume:target [href="#resume"],#projects:target [href="#projects"],#links:target [href="#links"],#contact:target [href="#contact"] {
-    background: #eee;
-    border-bottom: 1px solid #777;
-    border-left: 1px solid #777;
-    padding-left: 6px;
-    padding-bottom: 6px;
-    top: 4px;
-    left: -4px;
-    margin-left: 3.5px;
-    margin-right: -3.5px;
-    box-shadow: -1px 1px 11px -4px #000 inset,1px -1px 0 #fff inset;
-    border-width: 4px 4px 0 0;
-}
-
-nav a::before,nav a::after {
-    content: '';
-    position: absolute;
-    display: inline-block;
-    border: 0 solid transparent;
-    border-color: transparent;
-}
-
-nav a::before {
-    left: 0;
-    top: 0;
-    border-left-color: transparent;
-}
-
-nav a:hover::before,nav a:active::before,#home:target [href="#home"]::before,#resume:target [href="#resume"]::before,#projects:target [href="#projects"]::before,#links:target [href="#links"]::before,#contact:target [href="#contact"]::before {
-    left: 0;
-    top: -14px;
-    border-left: 7px solid #fff;
-    border-top: 7px solid #fff;
-    border-bottom: 7px solid transparent;
-    left: -7px;
-    top: -7px;
-}
-
-nav a::after {
-    bottom: 0;
-    right: 0;
-}
-
-nav a:hover::after {
-    border-left: 7px solid transparent;
-    border-bottom: 7px solid #fff;
-    border-right: 7px solid #fff;
-    bottom: -7px;
-    right: -7px;
-}
-
 main {
     display: table;
     position: relative;
@@ -165,7 +34,8 @@ main {
     width: 4000px;
 }
 
-main::before,main::after {
+main::before,
+main::after {
     content: '';
     position: absolute;
     width: 100%;
