--- a/resources/style/nav.scss
+++ b/resources/style/nav.scss
@@ -1,7 +1,7 @@
 // Copyright (c) 2016 Dustin Doloff
 // Licensed under Apache License v2.0
 
-@import 'resources/sections';
+@import 'sections';
 
 nav {
     padding-top: 30px;
