--- a/resources/style/main.scss
+++ b/resources/style/main.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    font-family: silkscreen,'Comic Sans';
+    font-family: silkscreen, monospace, sans-serif;
     text-shadow: -1px 1px 1px #000;
     width: 800px;
     margin: 0 auto;
@@ -20,10 +20,15 @@ body {
 a {
     color: #bbb;
     text-decoration: none;
-}
 
-a:hover {
-    color: #777;
+    &:focus,
+    &:hover {
+        color: #777;
+    }
+
+    &:focus {
+        outline: 0;
+    }
 }
 
 main {
@@ -32,27 +37,28 @@ main {
     text-align: left;
     transition: margin-left 800ms linear 400ms;
     width: 4000px;
+
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        transition: left 800ms linear 400ms,right 800ms linear 400ms;
+    }
+
+    &::before {
+        left: 0;
+    }
+
+    &::after {
+        right: 0;
+    }
 }
 
-main::before,
-main::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #fff;
-    transition: left 800ms linear 400ms,right 800ms linear 400ms;
-}
-
-main::before {
-    left: 0;
-}
-
-main::after {
-    right: 0;
-}
-
-#container::before,#container::after {
+#container::before,
+#container::after {
     content: '';
     display: inline-block;
     width: 0;
@@ -67,15 +73,18 @@ main::after {
     transition: left 800ms linear 400ms;
 }
 
-#continer::before,#home:target #container::before {
+#continer::before,
+#home:target #container::before {
     left: 0;
 }
 
-#continer::after,#home:target #container::after {
+#continer::after,
+#home:target #container::after {
     left: 780px;
 }
 
-main::after,#home:target main::after {
+main::after,
+#home:target main::after {
     right: -800px;
 }
 
@@ -135,22 +144,23 @@ section {
     box-sizing: border-box;
     border-top: 0 solid #ddd;
     position: relative;
-}
 
-section::before,section::after {
-    position: absolute;
-    top: -10px;
-    width: 10px;
-    height: 10px;
-    z-index: 100;
-}
+    &::before,
+    &::after {
+        position: absolute;
+        top: -10px;
+        width: 10px;
+        height: 10px;
+        z-index: 100;
+    }
 
-section::before {
-    left: -10px;
-}
+    &::before {
+        left: -10px;
+    }
 
-section::after {
-    right: -10px;
+    &::after {
+        right: -10px;
+    }
 }
 
 main::before,main::after {
