--- a/projects/commentube/css/main.css
+++ b/projects/commentube/css/main.css
@@ -1,3 +1,10 @@
+/* IE9 only */
+@media screen and (min-width:0\0) and (min-resolution:.001dpcm) {
+	.gradient {
+       filter: none;
+    }
+}
+
 #header{
 	text-align: center;
 	margin: 20px auto;
