--- a/resources/style/silkscreen.scss
+++ b/resources/style/silkscreen.scss
@@ -1,5 +1,5 @@
 @font-face {
   font-family: "silkscreen";
-  src: url("slkscr-webfont.ttf") format("truetype");
+  src: url("../fonts/slkscr-webfont.ttf") format("truetype");
   font-display: block;
 }
