--- a/resources/style/nav.scss
+++ b/resources/style/nav.scss
@@ -107,7 +107,9 @@ nav {
     left: -4px;
     margin-left: 3.5px;
     margin-right: -3.5px;
-    box-shadow: -1px 1px 11px -4px #000 inset, 1px -1px 0 #fff inset;
+    box-shadow:
+      -1px 1px 11px -4px #000 inset,
+      1px -1px 0 #fff inset;
     border-width: 4px 4px 0 0;
   }
 
